# ImageCompare

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/src/: main.cc
include/: imagecompare.h
src/: compare.h  imagecompare.cc  main.cc
src/comparemethod/: basecompare.h  codestats_2014.cc  codestats_2014.h  none.cc  none.h
